<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:background="@color/black_shade">


        <TextView
            android:id="@+id/tvLoginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news_app"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/yellow"
            android:textAlignment="center"
            android:layout_marginTop="50dp"
            app:layout_constraintBottom_toTopOf="@+id/etName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="-2.509" />


        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/name"
            android:textColorHint="@color/hint_color"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLoginTitle" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/email"
            android:textColorHint="@color/hint_color"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etName" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/black"
            android:backgroundTint="@color/yellow"
            android:textSize="24sp"
            android:layout_marginTop="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>