<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout

    android:background="@color/black_shade"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rvNewsItems"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/news_app_toolbar_heading"
                android:textAlignment="center"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNewsItems"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="65dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/news_rv_item"
        android:visibility="visible"/>

    <RelativeLayout
        android:id="@+id/rlError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainToolbar"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tvError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/something_went_wrong"
            android:textColor="@color/yellow"
            android:textSize="16sp"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/llErrorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvError"
            android:layout_centerVertical="true"
            android:layout_marginTop="41dp"
            android:background="@color/grey"
            android:gravity="center"
            android:padding="15dp"
            android:layout_marginStart="45dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/tvErrorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh"
                android:textSize="16sp"
                android:textColor="@color/yellow" />
        </LinearLayout>
    </RelativeLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainToolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>